# Meta-Learning-Project-Visual-Memory-Management

./: CMakeLists.txt  README.md  build_and_run.sh  example_code.c
src/: README.md  consolewidget.cpp  consolewidget.h  controlwidget.cpp  controlwidget.h  editorwidget.cpp  editorwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  variablewidget.cpp  variablewidget.h
src/interpreter/: README.md  ast.cpp  ast.h  executioncontext.cpp  executioncontext.h  interpreter.cpp  interpreter.h  parser.cpp  parser.h  programstate.cpp  programstate.h  tokenizer.cpp  tokenizer.h  tokentype.cpp  tokentype.h  value.cpp  value.h
